# SVDC

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SVDC_Design_Document_v0.1.html  fix_again.py  fix_base.py  fix_dataplane.py  fix_final.py  fix_sections.py  resolve_conflicts.py  rust-toolchain.toml  scratch_north.html  scratch_north_l0.html
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: config.yml  for-antigravity.yml  for-claude.yml  spec-ambiguity.yml
.github/workflows/: ci.yml
crates/ssiec-sv-publisher/: Cargo.toml
crates/ssiec-sv-publisher/src/: calibration_loader.rs  lib.rs  main.rs  pcap_writer.rs  vendor.rs  vendor_loader.rs  waveform.rs
crates/ssiec-sv-publisher/tests/: stream_roundtrip.rs  vendor_samples.rs
crates/svdc-aligner/: Cargo.toml
crates/svdc-aligner/src/: binner.rs  buffer.rs  calibrator.rs  interpolator.rs  lib.rs
crates/svdc-aligner/tests/: end_to_end_pipeline.rs
crates/svdc-api/: Cargo.toml
crates/svdc-api/src/: lib.rs  model.rs  state.rs
crates/svdc-api/src/routes/: calibration.rs  channels.rs  health.rs  metrics.rs  mod.rs
crates/svdc-api/tests/: routes.rs
crates/svdc-bin/: Cargo.toml
crates/svdc-bin/src/: main.rs
crates/svdc-console/: Cargo.toml
crates/svdc-console/src/: lib.rs
crates/svdc-console/src/assets/: mod.rs  styles.css
crates/svdc-console/src/audit/: mod.rs
crates/svdc-console/src/dataplane/: mod.rs
crates/svdc-console/src/operational/: mod.rs
crates/svdc-console/src/routes/: assets.rs  audit.rs  calibration.rs  config.rs  dashboard.rs  dataplane.rs  l1_wizard.rs  mod.rs  monitoring.rs  mu_detail.rs  mus_list.rs  northbound.rs  sse.rs
crates/svdc-console/src/scd/: mod.rs  registry.rs  sample.rs
crates/svdc-console/src/sse/: emitter.rs  mod.rs
crates/svdc-console/src/templates/: base.rs  charts.rs  components.rs  mod.rs
crates/svdc-core/: Cargo.toml
crates/svdc-core/src/: integrity.rs  lib.rs
crates/svdc-historian/: Cargo.toml
crates/svdc-historian/src/: lib.rs
crates/svdc-historian/tests/: pipeline_to_csv.rs
crates/svdc-ingress/: Cargo.toml
crates/svdc-ingress/src/: decoder.rs  lib.rs  ring.rs  subscriber.rs  timestamp.rs  udp.rs
crates/svdc-ingress/tests/: loopback_pipeline.rs
crates/svdc-l1-opcua-client/: Cargo.toml
crates/svdc-l1-opcua-client/src/: main.rs
crates/svdc-opcua/: Cargo.toml
crates/svdc-opcua/src/: address_space.rs  lib.rs  quality.rs  server.rs  timestamp.rs
crates/svdc-subscribe/: Cargo.toml
crates/svdc-subscribe/src/: channels.rs  lib.rs
crates/svdc-subscribe/tests/: full_data_plane.rs
docs/: CIGRE_2024_Alignment_Review.md  CIGRE_2024_Northbound_Review.md  L4_C37118_Implementation_Plan.md  SVDC_Implementation_Plan_v0.2.html  SVDC_Implementation_Plan_v0.3_patch.md  Southbound_Gap_Analysis.md  field-connection-guide.md  l1-quickstart.md  mu-vendor-profiles.md  northbound-simulators.md  simulator-runbook.md  spec-lock-proposal-v0.1.md  spec-lock-v0.1.md  telemetry_sse_simulator_sync.md  verification-plan.md
docs/decisions/: 0000-record-architecture-decisions.md  0001-dual-agent-workflow.md  0002-web-based-ui-monitoring-dashboard.md  0003-sv-encoder-design.md  0004-ui-stack.md  0005-daemon-vs-ui-mode.md  0006-provisional-spec-lock-defaults.md  0007-scd-as-immutable-input.md  0008-ingress-design.md  0009-aligner-design.md  0010-subscriber-api.md  0011-historian-design.md  0012-integrity-overlay.md  0013-management-api.md  0014-vendor-profiles.md  0015-simulator-driven-live-ui.md  0016-northbound-simulators.md  0017-embedded-telemetry-history.md  0017-l1-opcua-server.md  DC_Offset_Location_and_Southbound_Gaps.md
docs/dual-agent/: wbs-9-ui-handoff.md
docs/vendor-samples/: README.md  abb_relion_670.csv  abb_relion_670.icd  ge_ur_series.csv  ge_ur_series.icd  sel_2240.csv  sel_2240.icd  siemens_siprotec_5.csv  siemens_siprotec_5.icd
samples/: avista_utilities_substation.scl  dominion_energy_substation.scd  kepco_gwangju_substation.scd  southern_company_substation.scd
scripts/: lint-english-only.sh  monitor-and-test.ps1
