[workspace]
resolver = "2"
members = [
    "crates/svdc-core",
    "crates/svdc-bin",
    "crates/ssiec-sv-publisher",
    "crates/svdc-console",
    "crates/svdc-ingress",
    "crates/svdc-aligner",
    "crates/svdc-subscribe",
    "crates/svdc-historian",
    "crates/svdc-api",
    "crates/svdc-opcua",
    "crates/svdc-l1-opcua-client",
]


# Additional crates planned for later phases (per IP §2 WBS-1.2):
#   crates/svdc-mqtt         -- WBS-3.8      (Phase 4)
#   crates/svdc-cabi         -- C ABI for in-process subscribers
# Add each to `members` above when the crate is created.

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Shinsung Industrial Electric Co., Ltd. (SSIEC)"]
repository = "https://github.com/yongalee/SVDC"
rust-version = "1.75"

[workspace.dependencies]
# Pin shared deps here as they are introduced.
# Examples (uncomment when used):
# anyhow = "1"
# thiserror = "1"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["json"] }
# tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1            # keep symbols for production profiling

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1
