[package]
name = "svdc-console"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Operator Console for SVDC: serves the web dashboard, southbound MU management, and northbound layer controls."

[dependencies]
svdc-core = { path = "../svdc-core" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
maud = { version = "0.26", features = ["axum"] }
rust-embed = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
