[package]
name = "svdc-console"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Operator Console for SVDC: serves the web dashboard, southbound MU management, and northbound layer controls."

[dependencies]
svdc-core = { path = "../svdc-core" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
maud = { version = "0.26", features = ["axum"] }
rust-embed = { version = "8.0", features = ["mime-guess"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
