[package]
name = "svdc-console"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Operator Console for SVDC: serves the web dashboard, southbound MU management, and northbound layer controls."

[dependencies]
svdc-core = { path = "../svdc-core" }
svdc-aligner = { path = "../svdc-aligner" }
svdc-ingress = { path = "../svdc-ingress" }
svdc-subscribe = { path = "../svdc-subscribe" }
svdc-historian = { path = "../svdc-historian" }
svdc-api = { path = "../svdc-api" }
ssiec-sv-publisher = { path = "../ssiec-sv-publisher" }
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
maud = { version = "0.26", features = ["axum"] }
rust-embed = { version = "8.0", features = ["mime-guess"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
roxmltree = "0.20"
toml = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
